recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:17: error: too many arguments for method avance: (x$1: Double)Unit
   avance(level-1,length/2)
         ^